--- a/YoursMine/YoursMine/내꺼팔기/SellingTab.storyboard
+++ b/YoursMine/YoursMine/내꺼팔기/SellingTab.storyboard
@@ -84,7 +84,7 @@
                                                             <constraint firstAttribute="height" constant="1" id="nXK-KN-e76"/>
                                                         </constraints>
                                                     </view>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2p-s8-se2">
+                                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2p-s8-se2">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="67"/>
                                                         <connections>
                                                             <action selector="selectSelling:" destination="MQh-G1-mBQ" eventType="touchUpInside" id="Pke-x9-Jvw"/>
@@ -120,7 +120,7 @@
                                                             <constraint firstAttribute="height" constant="1" id="70c-DR-yXh"/>
                                                         </constraints>
                                                     </view>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fyk-pC-qH6">
+                                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fyk-pC-qH6">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="66.5"/>
                                                         <connections>
                                                             <action selector="selectSelling:" destination="MQh-G1-mBQ" eventType="touchUpInside" id="NYO-L9-O8L"/>
@@ -370,7 +370,7 @@
                                                         <rect key="frame" x="30" y="25" width="364" height="20"/>
                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="17"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                     </textField>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nDu-4T-uj4" userLabel="LineView">
                                                         <rect key="frame" x="20" y="69" width="374" height="1"/>
@@ -398,7 +398,7 @@
                                                         <rect key="frame" x="30" y="25" width="364" height="20"/>
                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="17"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                     </textField>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Egp-e2-gGu" userLabel="LineView">
                                                         <rect key="frame" x="20" y="69" width="374" height="1"/>
@@ -422,12 +422,12 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wWf-qy-0Gb" userLabel="Content View">
                                                 <rect key="frame" x="20" y="280" width="374" height="616"/>
                                                 <subviews>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="e4b-8x-FWg">
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e4b-8x-FWg">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="616"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     </textView>
                                                 </subviews>
@@ -487,6 +487,7 @@
                     </view>
                     <connections>
                         <outlet property="textView" destination="e4b-8x-FWg" id="hyO-nH-Esy"/>
+                        <outlet property="titleLabel" destination="dyl-sc-vOY" id="vAn-sF-80Z"/>
                         <outlet property="txtFldCnt" destination="YqH-Fr-vwg" id="Vqk-EY-soC"/>
                         <outlet property="txtFldPerson" destination="2qK-nj-7qi" id="7Me-B7-x5O"/>
                         <outlet property="txtFldTitle" destination="i1W-g0-4Xn" id="M5t-Op-Bi8"/>
